# weatherflow

./: .env.example  .env.example.ollama  .gitignore  .gitleaksignore  AGENTS.md  Makefile  README.md  design-qa.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  weatherflow-architecture-v1.md  weatherflow-architecture-v2.md  weatherflow-architecture-v3.md  weatherflow-v2-roadmap.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  chat_agent.py  dev_review_agent.py  memory_agent.py  planning_agent.py  reflection_agent.py  rhythm_agent.py  state_agent.py
backend/app/core/: __init__.py  agent_runs.py  evidence_summarizer.py  llm.py  memory_maintenance.py  model_router.py  orchestrator.py  patterns.py  prompts.py  scheduled_check.py  scheduler.py
backend/app/mcp/: __init__.py  base.py  github.py  google_calendar.py  notes.py  notes_ingest.py
backend/app/mcp_client/: INTEGRATION_EXAMPLE.md  README.md  __init__.py  agent_tool_executor.py  client.py  dispatcher.py  pool.py  provider_registry.py  tool_registry.py
backend/app/memory/: __init__.py  checkin_repo.py  compressor.py  context.py  context_loader.py  delayed_writer.py  derivations.py  dev_review_repo.py  digests.py  episodic.py  event_log.py  events_repo.py  extractor.py  git_repo.py  hypotheses_view.py  hypothesis_repo.py  long_term_vector.py  maintenance_repo.py  midterm_md.py  notes_repo.py  profile_md.py  pruning.py  reflection_context.py  reflection_repo.py  retrieval.py  schemas.py  semantic.py  session_buffer.py  state_repo.py  store.py  timeline.py  vector.py  workspace_repo.py  writer.py
backend/app/observability/: __init__.py  langfuse_integration.py  structured_logging.py  tracing.py
backend/app/providers/: __init__.py  calendar.py  github.py  github_direct.py  github_mcp.py  google_calendar_direct.py  google_calendar_mcp.py
backend/app/routers/: __init__.py  _deps.py  actions.py  chat.py  checkin.py  dashboard.py  dev_review.py  events.py  feedback.py  hypotheses.py  loops.py  mcp.py  memory.py  profile.py  reflection.py  sensors.py  state.py  timeline.py
backend/app/schemas/: __init__.py
backend/app/sensors/: __init__.py  git_activity.py  hypotheses.py  notes.py  sweep_runner.py  workspace_activity.py
backend/app/state/: __init__.py
backend/app/tools/: __init__.py  demo_dataset.py  manual_report.py  run_demo_checkins.py
backend/eval/: __init__.py  judges.py  run_eval.py
backend/eval/datasets/: samples.json
backend/scripts/: seed.py
backend/tests/: conftest.py  test_action_proposals.py  test_actions_api.py  test_agent_runs.py  test_agent_tool_executor.py  test_calendar_mcp_provider.py  test_checkin_flow.py  test_dev_review_agent.py  test_dev_review_api.py  test_dev_review_cli.py  test_dev_review_providers.py  test_dev_review_repo.py  test_eval.py  test_github_mcp_multi_repo.py  test_github_mcp_provider.py  test_maintenance_jobs.py  test_mcp_client.py  test_mcp_provider_mode.py  test_memory.py  test_memory_feedback.py  test_model_router_and_scheduler.py  test_notes_sensor.py  test_orchestrator_flow.py  test_patterns.py  test_planning_actions.py  test_reflection_agent.py  test_sensor_hypotheses.py  test_sensor_sweep.py  test_state_agent.py  test_tool_registry.py
backend/tests/agents/: test_chat_graph.py  test_graph_runner.py  test_rhythm_graph.py
backend/tests/contracts/: test_event_log.py  test_hypothesis_schema.py  test_llm_json.py  test_source_event_id.py
backend/tests/eval/: test_golden_critic.py  test_golden_hypothesis.py  test_golden_tool_dispatch.py
backend/tests/flows/: test_chat_multiturn_flow.py  test_chat_stream_flow.py  test_checkin_flow.py  test_proposal_resume.py
backend/tests/memory/: test_card_stack.py  test_consolidator.py  test_delayed_writer.py  test_fiv.py  test_mem0_config.py  test_pruning.py  test_semantic.py
backend/tests/observability/: test_observability_wiring.py  test_run_context.py  test_tracing.py
backend/tests/tools/: test_discovery.py  test_dispatcher.py
cli/: pyproject.toml
cli/weatherflow_cli/: __init__.py  __main__.py  api.py  checkin.py  dashboard_cmd.py  dev_review.py  git_scan.py  loops.py  notes_scan.py  paths.py  patterns.py  reflect.py  sensor_sweep.py  setup_calendar.py  start_cmd.py  stop_cmd.py  weather.py  workspace_scan.py
core/: pyproject.toml
core/src/weatherflow/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py
core/tests/: conftest.py  test_bootstrap.py  test_cli.py  test_config.py
core/tests/activity/: test_activity_category_rules.py  test_activity_context.py  test_activity_inference.py  test_activity_models.py  test_activity_recovery.py  test_activity_repository.py  test_activity_sanitizer.py  test_activity_semantic.py  test_activity_service.py  test_activity_summary_settings.py  test_activity_windows.py  test_activitywatch_client.py
core/tests/api/: test_activity_api.py  test_activity_summary_settings_api.py  test_approvals_artifacts.py  test_bridge.py  test_connectors.py  test_desktop_bootstrap.py  test_health.py  test_model_api.py  test_operations.py  test_rhythm.py  test_runs.py  test_tools_api.py  test_watch_oauth_feed.py  test_watch_profile.py  test_workspaces.py
core/tests/artifacts/: test_artifact_repository.py  test_artifact_store.py
core/tests/automations/: test_automation_models.py  test_automation_repository.py  test_automation_service.py
core/tests/capabilities/: test_activity_tools.py  test_catalog_resolver.py  test_developer_tools.py  test_operations_tools.py  test_personal_tools.py  test_research_tools.py  test_snapshot_coordinator.py  test_snapshots.py  test_tool_spec.py
core/tests/connectors/: test_background_sync.py  test_calendar_adapter.py  test_composio_gateway.py  test_connector_models.py  test_conversation_tools.py  test_feed.py  test_repository.py  test_service.py  test_sync.py
core/tests/continuations/: test_provider_continuation_repository.py
core/tests/contracts/: test_activity_imports.py  (+6 more)
desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
(+602 files in other folders)
