[project]
name = "weatherflow-workspace"
version = "0.1.0"
description = "WeatherFlow workspace metadata for uv dependency locking"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["backend", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend", "."]
