[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherflow-cli"
version = "0.1.0"
description = "WeatherFlow CLI: life-state companion and behavior sensors"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12,<0.16",
    "httpx>=0.27,<0.29",
    "rich>=13.7,<14.0",
    "python-dotenv>=1.0,<2.0",
    "google-auth>=2.30,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
]

[project.scripts]
wf = "weatherflow_cli.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["weatherflow_cli*"]
