[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherflow-core"
version = "3.0.0a1"
description = "Local Python harness daemon for WeatherFlow v3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.11,<1.0",
]

[project.scripts]
weatherflow = "weatherflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
