[package]
name = "weatherflow-desktop"
version = "3.0.0-alpha.1"
description = "WeatherFlow rhythm-aware desktop shell"
edition = "2021"

[lib]
name = "weatherflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"
keyring = "4.1.4"
security-framework = { version = "3.5.1", features = ["OSX_10_12"] }
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace", "libc"] }
